// Copyright (c) 2019 Elliot Peele <elliot@bentlogic.net>
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pb;

// The golang wasm example service definition.
service WASMExample {
    rpc ListUsers (Empty) returns (UsersResponse) {}
    rpc ListProjects (Empty) returns (ProjectsResponse) {}
}

message Empty {}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message UsersResponse {
    repeated User users = 1;
}

message Project {
    string id = 1;
    string name = 2;
    google.protobuf.Timestamp updated_at = 5;
}

message ProjectsResponse {
    repeated Project projects = 1;
}